# regression-streamlit-guide

./: .flake8  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LINTING_SETUP_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART_DEPLOYMENT.md  README.md  app.py  config.py  content.py  coverage.xml  data.py  environment-variables.example  mypy.ini  plot_factory.py  plots.py  pyproject.toml  regression_leitfaden.py  regression_leitfaden.py.backup  regression_leitfaden_backup.py  regression_leitfaden_matplotlib_commented.py  requirements-dev.txt  requirements.txt  run.py  setup_production.sh  streamlit_app.py  topic10.md  topic11.md  validate_deployment.py
.agent/rules/: architecturedesign.md
.cursor/rules/: architecturedesign.mdc
.github/workflows/: deployment-validation.yml  lint.yml  tests.yml
.streamlit/: config.toml  secrets.toml.example
config/: .coveragerc  .flake8  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini
docs/: ACCESSIBILITY.md  API.md  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  CLEANUP_SUMMARY.md  CODE_REVIEW_FEEDBACK.md  DEVELOPMENT.md  FINAL_REFACTORING_ANALYSIS.md  GAP_ANALYSIS.md  INTEGRATION_GUIDE.md  LOGGING.md  MODULARIZATION_PLAN.md  PERPLEXITY_INTEGRATION.md  PIPELINE_ARCHITECTURE.md  PRODUCTION_SETUP.md  README.md  REFACTORING.md  REFACTORING_POTENTIALS.md  REFACTORING_SUMMARY.md  STABILITY_IMPROVEMENTS.md  TESTING.md  VISUAL_COMPARISON.md  VISUAL_GUIDE.md  openapi.yaml
scripts/: README.md  check_modular_separation.py  run_tests.sh  validate_architecture.py  verify_code_quality.sh
src/: __init__.py  accessibility.py  app.py  config.py  container.py  content.py  data.py  data_loading.py  data_preparation.py  legacy_monolith_app.py  logger.py  perplexity_api.py  plots.py  r_output.py  session_state.py  sidebar.py  statistics.py  ui_config.py
src/adapters/: __init__.py  ai_components.py  base.py  detector.py  flask_app.py  streamlit_app.py
src/adapters/renderers/: __init__.py  html_renderer.py  streamlit_renderer.py
src/adapters/streamlit/: __init__.py  app.py
src/adapters/templates/: base.html  educational_content.html  error.html  index.html  interpret.html  multiple_regression.html  simple_regression.html
src/ai/: __init__.py
src/api/: __init__.py  endpoints.py  serializers.py  server.py
src/config/: __init__.py
src/content/: multiple_regression.py  simple_regression.py
src/core/: __init__.py
src/core/application/: __init__.py  application_services.py  commands.py  dtos.py  event_handlers.py  handlers.py  queries.py  use_cases.py
src/core/domain/: __init__.py  aggregates.py  entities.py  events.py  factories.py  interfaces.py  repositories.py  result.py  services.py  specifications.py  unit_of_work.py  value_objects.py
src/data/: __init__.py  content.py  data_loading.py  data_preparation.py
src/data/api_clients/: __init__.py  bfs_client.py  eurostat_client.py  fred_client.py  who_client.py  world_bank_client.py
src/data/data_generators/: __init__.py  dummy_encoding_generator.py  market_data_generator.py  mock_data_generator.py  multiple_regression_generator.py  regression_data_generator.py  simple_regression_generator.py  swiss_data_generator.py
src/infrastructure/: __init__.py  adapters.py  dependency_container.py  native_ols.py  pipeline.py  regression_pipeline.py  repositories.py  statistics.py  stats_calculation.py  stats_diagnostics.py  stats_modeling.py  stats_utils.py
src/infrastructure/ai/: formatters.py  perplexity_client.py
src/infrastructure/content/: __init__.py  builder.py  multiple_regression.py  simple_regression.py  structure.py
src/infrastructure/data/: __init__.py  generators.py  provider.py
src/infrastructure/services/: __init__.py  calculate.py  classification.py  data_splitting.py  plot.py
src/pipeline/: __init__.py  calculate.py  display.py  get_data.py  plot.py  regression_pipeline.py
src/tabs/: multiple_regression.py  simple_regression.py  tab_datasets.py
src/tabs/simple_regression/: __init__.py  anova.py  conclusion.py  data_exploration.py  diagnostics.py  estimation.py  evaluation.py  inference.py  intro.py  model.py
src/ui/: __init__.py  accessibility.py  plot_3d.py  plot_basic.py  plot_r.py  plot_utils.py  plots.py  r_output.py  sidebar.py  ui_config.py
src/ui/tabs/: __init__.py  datasets.py  multiple_regression.py  multiple_regression_educational.py  simple_regression.py  simple_regression_educational.py
src/utils/: __init__.py  perplexity_api.py  session_state.py
tests/: README.md  __init__.py  conftest.py  test_accessibility.py  test_app_integration.py  test_data.py  test_error_handling.py  test_logging.py  test_modular_separation.py  test_new_modules.py  test_performance.py  test_plots.py  test_property_based.py
tests/e2e/: test_streamlit_app.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_architecture.py  test_domain.py  test_pipeline.py
