# ====================================================================
# Modern Python Project Configuration
# ====================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-regression-guide"
version = "1.0.0"
description = "Interactive Streamlit app for learning linear regression"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Luca Hagenmayer", email = "contact@example.com"},
]
maintainers = [
    {name = "Linear Regression Guide Team"},
]
keywords = ["education", "statistics", "machine-learning", "streamlit", "data-visualization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "streamlit>=1.28.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
# ====================================================================
# Minimal tool configuration
# ====================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "streamlit: Streamlit AppTest",
]
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"tests/*" = ["B011", "S101"]  # assert used, assert detected
"scripts/*" = ["T201", "T203"]  # print found, pprint found
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.isort]
known-first-party = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
