# ====================================================================
# Modern Python Project Configuration
# ====================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-regression-guide"
version = "1.0.0"
description = "Interactive Streamlit app for learning linear regression"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Luca Hagenmayer", email = "contact@example.com"},
]
maintainers = [
    {name = "Linear Regression Guide Team"},
]
keywords = ["education", "statistics", "machine-learning", "streamlit", "data-visualization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "streamlit>=1.28.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "plotly>=5.14.0,<6.0.0",
    "statsmodels>=0.14.0,<1.0.0",
    "scipy>=1.11.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/lhagenmayer/linear-regression-guide"
Repository = "https://github.com/lhagenmayer/linear-regression-guide"
Documentation = "https://github.com/lhagenmayer/linear-regression-guide/blob/master/docs/"
"Bug Reports" = "https://github.com/lhagenmayer/linear-regression-guide/issues"
Changelog = "https://github.com/lhagenmayer/linear-regression-guide/blob/master/CHANGELOG.md"

[project.scripts]
"linear-regression-guide" = "run:main"

# ====================================================================
# Tool Configurations
# ====================================================================

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Version control
  \.git
  | \.hg
  | \.svn

  # Build outputs
  _build
  | buck-out
  | build
  | dist
  | \.eggs
  | *.egg

  # Virtual environments
  \.venv
  | venv
  | env
  | .env

  # Testing and coverage
  htmlcov
  | \.coverage
  | coverage\.xml
  | \.pytest_cache
  | \.tox
  | \.mypy_cache

  # IDEs
  \.vscode
  | \.idea
  | __pycache__
  | \.DS_Store
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src"]
known_third_party = ["streamlit", "numpy", "pandas", "plotly", "statsmodels", "scipy"]

[tool.bandit]
exclude_dirs = ["tests", "docs", "scripts"]
skips = ["B101", "B601"]  # Skip assert checks and shell usage

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "src/__init__.py",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
    "*/env/*",
    "*/.env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
    "st\\.",  # Streamlit calls
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--tb=short",
]
timeout = 300
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for workflows",
    "streamlit: Tests using Streamlit AppTest framework",
    "performance: Performance and regression tests",
    "slow: Slow running tests (deselect with '-m \"not slow\"')",
    "visual: Visual regression tests for plots",
    "property: Property-based tests using Hypothesis",
    "smoke: Quick smoke tests for basic functionality",
]

filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:streamlit.*",
]

[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by Black)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"tests/*" = ["B011", "S101"]  # assert used, assert detected
"scripts/*" = ["T201", "T203"]  # print found, pprint found
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.isort]
known-first-party = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
